--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
-    "deploy": "rollup -c && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete --dryrun && echo -e '[+] Waiting 10 seconds before deploying...' && sleep 10 && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete"
+    "build": "npm run gen && rollup -c",
+    "dev": "npm run gen && rollup -c -w",
+    "start": "npm run gen && sirv public --no-clear",
+    "gen": "node src/generatePictures.js",
+    "deploy": "npm run build && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete --dryrun && echo -e '[+] Waiting 10 seconds before deploying...' && sleep 10 && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
