update metadata cleaning and add pics

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm run gen && rollup -c -w",
     "start": "npm run gen && sirv public --no-clear",
     "gen": "node src/generatePictures.js",
-    "clean": "exiftool -all= public/img/feed && rm -f public/img/feed/*_original",
+    "clean": "exiftool -all= -tagsfromfile @ -Orientation public/img/feed && rm -rf public/img/feed/*_original public/img/feed/.comments",
     "deploy": "npm run build && npm run clean && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete --dryrun && echo -e '[+] Waiting 10 seconds before deploying...' && sleep 10 && aws s3 sync ./public/ s3://lzahq-prod-web-origin/ --delete"
   },
   "devDependencies": {
